[refs #27285] FCB cap升級